фикс структуры проекта, добавил стили в файлик css (картинка не отображалась из-за того что html не видел стилей, нужно компилировать scss в css)

--- a/styles.scss
+++ b/styles.scss
@@ -29,10 +29,10 @@ body {
 // === header ===
 .section-header {
     color: #000000;
-    background: url('../img/Rectangle 3.png') 
-    background-size: cover:
-    position: relative:
- 
+    background: url('../img/Rectangle 3.png'); 
+    background-size: cover;
+    position: relative;
+
     
     .section-inner {
         height: 100vh;
