--- a/styles.scss
+++ b/styles.scss
@@ -26,18 +26,18 @@ body {
 }
 // === / Common ===
 
-// === header ===
-.section-header {
-    color: #000000;
-    background: url('../img/Rectangle 3.png') 
-    background-size: cover:
-    position: relative:
+// === header == 
+.section-header{
+    color: #da1818;
+    background-image: url('./img/Rectangle 3.png');
+    background-size: cover;
+    position: relative;
  
     
     .section-inner {
         height: 100vh;
         position: relative;
-        z-index: 10;
+        z-index: 50;
     }
 
     &::before {
